--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
             </button>
             <p id='count'>Correct Answers: <span id='num'></span></p>
             <p id='streak'>Streak:  <span id='num2'></span></p>
+            <p id='per'>Percentage: <span id='num3'></span></p>
          </div>
       </div>
 
       <footer>Nikola Pavlovic &copy; 2020.</footer>
-
+      
       <script src='main.js'></script>
    </body>
 </html>
