--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
             <button id='next'>
                <i class="fa fa-arrow-right"></i>
             </button>
-            <p id='count'>Correct Answers: <span id='num'></span></p>
-            <p id='streak'>Streak:  <span id='num2'></span></p>
-            <p id='per'>Percentage: <span id='num3'></span></p>
+            <div class='info'>
+               <p id='count'>Correct Answers: <span id='num'></span></p>
+               <p id='streak'>Streak:  <span id='num2'></span></p>
+               <p id='per'>Percentage: <span id='num3'></span></p>
+            </div>
          </div>
       </div>
 
